# Life

./: .gitignore  CMakeLists.txt  build.sh  build_toolbx.sh  build_with_toolbx.sh  eu.catwitch.Life.desktop  eu.catwitch.life.desktop  init_toolbx.sh
src/: BasicEngine.cpp  BasicEngine.hpp  CMakeLists.txt  CellRules.hpp  Engine.cpp  Engine.hpp  MainWindow.cpp  MainWindow.hpp  MapReduceEngine.cpp  PatternsLibrary.cpp  PatternsLibrary.h  PatternsLibrary.hpp  StandardCellRules.cpp  StandardCellRules.hpp  StandardEngine.cpp  StandardEngine.hpp  ThreadedEngine.cpp  ThreadedEngine.hpp  ThreadedTiledEngine.cpp  ThreadedTiledEngine.hpp  TiledEngine.cpp  TiledEngine.hpp  World.cpp  World.h  World.hpp  WorldView.cpp  WorldView.hpp  main.cpp
src/core/: BasicEngine.cpp  BasicEngine.hpp  CMakeLists.txt  CellRules.cpp  CellRules.hpp  Engine.cpp  Engine.hpp  MapReduceEngine.cpp  MapReduceEngine.hpp  PatternsLibrary.cpp  PatternsLibrary.hpp  StandardCellRules.cpp  StandardCellRules.hpp  TiledEngine.cpp  TiledEngine.hpp  World.cpp  World.hpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  StatsGraph.cpp  StatsGraph.hpp  StatsGraph.qml  WorldView.cpp  WorldView.hpp  main.cpp
src/qml/: CMakeLists.txt  MainWindow.qml  WorldItem.cpp  WorldItem.hpp  WorldView.cpp  WorldView.hpp  main.cpp
